[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fontes/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Tema_jogo.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/TelaConfiguracao.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="TelaConfiguracao" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.109804, 0.109804, 1 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 580.0
custom_constants/separation = 60

[node name="ConfigLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 944.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Configuracoes"
align = 1

[node name="GridContainer" type="GridContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 944.0
margin_bottom = 220.0
columns = 2

[node name="SFXLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 160.0
margin_bottom = 48.0
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 444.0
margin_right = 944.0
margin_bottom = 16.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="MusicaLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 100.0
text = "Musica"

[node name="MusicaSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 444.0
margin_top = 52.0
margin_right = 944.0
margin_bottom = 68.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 944.0
margin_bottom = 328.0

[node name="Button" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 401.0
margin_right = 542.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Voltar"
icon_align = 1

[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/GridContainer/MusicaSlider" to="." method="_on_MusicaSlider_value_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/CenterContainer/Button" to="." method="_on_Button_pressed"]
